add-checkout-and-delivery-options
